# fly-machines-demo

./: .pre-commit-config.yaml  Dockerfile  config.py  main.py  pyproject.toml  readme.md
.github/workflows/: docker-image.yml
templates/: landing_page.html
