[tool.poetry]
name = "fly-machines-demo"
version = "0.1.0"
description = ""
authors = ["Josef Rousek <josef@rousek.name>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = "^0.75.2"
python-dotenv = "^0.20.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn main:app --reload"
